# test-cli

./: .ghd.yml  pyproject.toml
js-cli/: index.js  package-lock.json  package.json
src/test_cli/: __init__.py  cli.py
