[project]
name = "test-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.47.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
test-cli = "test_cli:main"

[tool.execx]
entry-points = "test-cli"